# zobar

./: .gitignore  .pre-commit-config.yaml  README.md  demo.py  demo_async.py  demo_colors.py  demo_group.py  demo_indeterminate.py  demo_parallel.py  demo_smoothing.py  demo_threading.py  demo_units.py  pyproject.toml
.github/workflows/: ci.yml
src/zobar/: __init__.py
tests/: test_multiline.py  test_nontty_interval.py  test_suffix_logging.py  test_zobar.py
