[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zobar"
version = "0.2.0"
description = "Zero-dependency, high-performance progress bar for HPC and workstations"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
  {name = "Vishnuvardhan Reddy", email = "vvr3ddy@proton.me"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Shells",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
keywords = ["progress", "bar", "cli", "terminal", "hpc", "zero-dependency"]

[project.urls]
"Homepage" = "https://github.com/vvr3ddy/zobar"
"Bug Tracker" = "https://github.com/vvr3ddy/zobar/issues"
